apps/karakeep/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: karakeep
spec:
  rules:
    - host: karakeep.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep-chart
                port:
                  number: 3000
